<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_create_file"
        android:icon="@drawable/ic_create"
        android:title="@string/action_create"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_paste"
        android:title="@string/action_paste"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_move"
        android:title="@string/action_move"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send"
        android:title="@string/action_send"
        app:showAsAction="never" />

</menu>